# reflow_plate

./: .gitignore  .gitmodules  readme.md
code/: CMakeLists.txt
code/include/: sensor.h  t_sensor.h
code/src/: CMakeLists.txt  main.c  t_sensor.c
reflow_plate_fw/: platformio.ini
reflow_plate_fw/include/: plate_pins.h  plate_sensor.h
reflow_plate_fw/src/: plate_sensor.c
